--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -44,7 +44,7 @@
             android:minHeight="16dp"
             />
 
-        <com.getbase.floatingactionbutton.FloatingActionButton
+        <!--com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/action_add_current_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -57,9 +57,9 @@
             fab:fab_addButtonColorPressed="@color/accent"
             fab:fab_addButtonPlusIconColor="@android:color/white"
             fab:fab_icon="@drawable/ic_action_maps_place"
-            />
+            /-->
 
-        <!--com.getbase.floatingactionbutton.FloatingActionsMenu
+        <com.getbase.floatingactionbutton.FloatingActionsMenu
             android:id="@+id/multiple_actions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -95,7 +95,7 @@
                 fab:fab_colorPressed="@color/accent"/>
 
             <com.getbase.floatingactionbutton.FloatingActionButton
-                android:id="@+id/add_point"
+                android:id="@+id/add_current_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 fab:fab_colorNormal="@color/primary"
@@ -104,7 +104,7 @@
                 fab:fab_icon="@drawable/ic_action_maps_place"
                 fab:fab_colorPressed="@color/accent"/>
 
-        </com.getbase.floatingactionbutton.FloatingActionsMenu-->
+        </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
 
     </RelativeLayout>
