--- a/app/src/main/res/layout-land/fragment_map.xml
+++ b/app/src/main/res/layout-land/fragment_map.xml
@@ -44,7 +44,7 @@
             android:minHeight="16dp"
             />
 
-        <com.getbase.floatingactionbutton.FloatingActionButton
+        <!--com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/action_add_current_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -57,9 +57,9 @@
             android:layout_marginRight="16dp"
             android:layout_marginEnd="16dp"
             fab:fab_icon="@drawable/ic_action_maps_place"
-            />
+            /-->
 
-        <!--com.getbase.floatingactionbutton.FloatingActionsMenu
+        <com.getbase.floatingactionbutton.FloatingActionsMenu
             android:id="@+id/multiple_actions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -75,7 +75,7 @@
             fab:fab_expandDirection="left">
 
             <com.getbase.floatingactionbutton.FloatingActionButton
-                android:id="@+id/action_a"
+                android:id="@+id/add_geometry_by_walk"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 fab:fab_colorNormal="@color/primary"
@@ -84,7 +84,7 @@
                 fab:fab_colorPressed="@color/accent"/>
 
             <com.getbase.floatingactionbutton.FloatingActionButton
-                android:id="@+id/action_b"
+                android:id="@+id/add_new_geometry"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 fab:fab_colorNormal="@color/primary"
@@ -93,7 +93,7 @@
                 fab:fab_colorPressed="@color/accent"/>
 
             <com.getbase.floatingactionbutton.FloatingActionButton
-                android:id="@+id/action_c"
+                android:id="@+id/add_current_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 fab:fab_colorNormal="@color/primary"
@@ -101,7 +101,7 @@
                 fab:fab_icon="@drawable/ic_action_maps_place"
                 fab:fab_colorPressed="@color/accent"/>
 
-        </com.getbase.floatingactionbutton.FloatingActionsMenu-->
+        </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
 
     </RelativeLayout>
