--- a/app/src/main/res/xml/preferences_tracks.xml
+++ b/app/src/main/res/xml/preferences_tracks.xml
@@ -3,6 +3,7 @@
   ~ Project:  NextGIS Mobile
   ~ Purpose:  Mobile GIS for Android.
   ~ Author:   Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
+  ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
   ~ Copyright (c) 2012-2015. NextGIS, info@nextgis.com
   ~
@@ -28,20 +29,20 @@
         android:defaultValue="1"
         />
 
-    <EditTextPreference
+    <ListPreference
         android:key="tracks_min_time"
         android:title="@string/pref_min_time"
         android:defaultValue="0"
-        android:inputType="number"
-        android:numeric="integer"
+        android:entries="@array/tracker_min_time_between_updates"
+        android:entryValues="@array/tracker_min_time_between_updates_val"
         />
 
-    <EditTextPreference
+    <ListPreference
         android:key="tracks_min_distance"
         android:title="@string/pref_min_distance"
-        android:defaultValue="2"
-        android:inputType="number|numberDecimal"
-        android:numeric="decimal"
+        android:defaultValue="1"
+        android:entries="@array/tracker_min_dist_update"
+        android:entryValues="@array/tracker_min_dist_update_val"
         />
 
     <!-- TODO: add
