--- a/app/src/main/res/layout/fragment_attributes_tab.xml
+++ b/app/src/main/res/layout/fragment_attributes_tab.xml
@@ -22,10 +22,40 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
-              android:layout_width="match_parent"
+              android:layout_width="wrap_content"
               android:layout_height="match_parent"
-              android:layout_marginTop="?attr/actionBarSize"
+              android:background="@drawable/abc_popup_background_mtrl_mult"
+              android:layout_gravity="end"
     >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        >
+
+        <ImageButton
+            android:id="@+id/btn_attr_close"
+            android:layout_width="36dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/abc_ic_clear_mtrl_alpha"
+            android:background="@null"
+            android:tint="@color/button_material_dark"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            android:contentDescription="@android:string/cancel"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:singleLine="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:text="@string/action_attributes"
+            />
+    </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
