--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -23,9 +23,30 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <item
-        android:id="@+id/menu_add"
+        android:id="@+id/menu_locate"
+        android:title="@string/menu_locate"
         android:orderInCategory="100"
         app:showAsAction="always"
+        android:icon="@drawable/ic_action_location_found"
+        />
+    <item
+        android:id="@+id/menu_refresh"
+        android:title="@string/refresh"
+        android:orderInCategory="100"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_action_sync"
+        />
+    <item
+        android:id="@+id/menu_track"
+        android:title="@string/track_start"
+        android:orderInCategory="100"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_action_maps_directions_walk"
+        />
+    <item
+        android:id="@+id/menu_add"
+        android:orderInCategory="100"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_add_layer"
         android:title="@string/action_add"
         >
@@ -46,20 +67,6 @@
         </menu>
     </item>
 
-    <item
-        android:id="@+id/menu_locate"
-        android:title="@string/menu_locate"
-        android:orderInCategory="100"
-        app:showAsAction="always"
-        android:icon="@drawable/ic_action_location_found"
-        />
-    <item
-        android:id="@+id/menu_track"
-        android:title="@string/track_start"
-        android:orderInCategory="100"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_action_maps_directions_walk"
-        />
     <item
         android:id="@+id/menu_settings"
         android:title="@string/action_settings"
