--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
             />
 
         <include
-            layout="@layout/actionbar"/>
+            layout="@layout/progressactionbar"/>
 
         <include
             layout="@layout/bottombar"
