--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -43,7 +43,8 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="windowActionBarOverlay">true</item>
-        <item name="android:actionBarPopupTheme">@style/ThemeOverlay.AppCompat.Light</item>
+        <item name="android:actionOverflowMenuStyle">@style/Theme.AppCompat.Light</item>
+        <item name="android:actionModeStyle">@style/ThemeOverlay.AppCompat.ActionBar</item>
     </style>
 
 </resources>
