--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,8 +42,10 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
         <item name="windowActionBarOverlay">true</item>
+    </style>
+
+    <style name="AppActionModeTheme" parent="AppTheme">
         <item name="actionBarPopupTheme">@style/Theme.AppCompat.Light</item>
-        <item name="android:textColor">@color/primary_text_default_material_light</item>
     </style>
 
     <style name="menu_labels_style">
