--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,6 +42,7 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
         <item name="windowActionBarOverlay">true</item>
+        <item name="android:textColor">@color/primary_text_default_material_light</item>
     </style>
 
     <style name="AppActionModeTheme" parent="AppTheme">
