--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -56,6 +56,7 @@
             fab:fab_addButtonPlusIconColor="@android:color/white"
             fab:fab_icon="@drawable/ic_plus"
             />
+
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/action_zoom_out"
             android:layout_width="wrap_content"
@@ -83,7 +84,8 @@
             fab:fab_addButtonColorPressed="@color/accent"
             fab:fab_addButtonPlusIconColor="@android:color/white"
             android:layout_marginRight="16dp"
-            android:layout_marginEnd="16dp">
+            android:layout_marginEnd="16dp"
+            >
 
             <com.getbase.floatingactionbutton.FloatingActionButton
                 android:id="@+id/add_geometry_by_walk"
@@ -92,7 +94,8 @@
                 fab:fab_colorNormal="@color/primary"
                 fab:fab_size="mini"
                 fab:fab_icon="@drawable/ic_action_maps_directions_walk"
-                fab:fab_colorPressed="@color/accent"/>
+                fab:fab_colorPressed="@color/accent"
+                />
 
             <com.getbase.floatingactionbutton.FloatingActionButton
                 android:id="@+id/add_new_geometry"
@@ -101,7 +104,8 @@
                 fab:fab_colorNormal="@color/primary"
                 fab:fab_size="mini"
                 fab:fab_icon="@drawable/ic_action_edit_light"
-                fab:fab_colorPressed="@color/accent"/>
+                fab:fab_colorPressed="@color/accent"
+                />
 
             <com.getbase.floatingactionbutton.FloatingActionButton
                 android:id="@+id/add_current_location"
@@ -110,7 +114,8 @@
                 fab:fab_colorNormal="@color/primary"
                 fab:fab_size="mini"
                 fab:fab_icon="@drawable/ic_action_maps_place"
-                fab:fab_colorPressed="@color/accent"/>
+                fab:fab_colorPressed="@color/accent"
+                />
 
         </com.getbase.floatingactionbutton.FloatingActionsMenu>
     </RelativeLayout>
