--- a/app/src/main/res/menu/attributes.xml
+++ b/app/src/main/res/menu/attributes.xml
@@ -21,7 +21,8 @@
   -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
+      xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
     <item
         android:id="@+id/menu_prev"
         app:showAsAction="ifRoom|withText"
