--- a/app/src/main/res/xml/preference_headers.xml
+++ b/app/src/main/res/xml/preference_headers.xml
@@ -30,27 +30,41 @@
     <header
         android:fragment="com.nextgis.mobile.SettingsFragment"
         android:title="@string/map"
-        android:summary="@string/map_summary">
-        <extra android:name="settings" android:value="map" />
+        android:summary="@string/map_summary"
+        >
+        <extra
+            android:name="settings"
+            android:value="map"
+            />
     </header>
     <header
         android:fragment="com.nextgis.mobile.SettingsFragment"
         android:title="@string/location"
-        android:summary="@string/location_summary">
-        <extra android:name="settings" android:value="location" />
+        android:summary="@string/location_summary"
+        >
+        <extra
+            android:name="settings"
+            android:value="location"
+            />
     </header>
     <header
         android:fragment="com.nextgis.mobile.SettingsFragment"
         android:title="@string/tracks"
-        android:summary="@string/tracks_summary">
-        <extra android:name="settings" android:value="tracks" />
+        android:summary="@string/tracks_summary"
+        >
+        <extra
+            android:name="settings"
+            android:value="tracks"
+            />
     </header>
     <header
         android:title="@string/ngw"
-        android:summary="@string/ngw_summary">
+        android:summary="@string/ngw_summary"
+        >
         <intent
             android:targetPackage="com.nextgis.mobile"
             android:targetClass="com.nextgis.mobile.NGWSettingsActivityProxy"
-            android:action="com.nextgis.mobile.PREFS_NGW" />
+            android:action="com.nextgis.mobile.PREFS_NGW"
+            />
     </header>
 </preference-headers>
