--- a/app/src/main/res/xml/syncadapter.xml
+++ b/app/src/main/res/xml/syncadapter.xml
@@ -27,4 +27,5 @@
     android:userVisible="true"
     android:supportsUploading="true"
     android:allowParallelSyncs="true"
-    android:isAlwaysSyncable="true"/>
+    android:isAlwaysSyncable="true"
+    />
