--- a/app/src/main/res/xml/preference_headers.xml
+++ b/app/src/main/res/xml/preference_headers.xml
@@ -22,13 +22,13 @@
 
 <preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- TODO: header
-        android:fragment="com.nextgis.mobile.SettingsFragment"
+        android:fragment="com.nextgis.mobile.fragment.SettingsFragment"
         android:title="@string/general"
         android:summary="@string/general_summary">
         <extra android:name="settings" android:value="general" />
     </header-->
     <header
-        android:fragment="com.nextgis.mobile.SettingsFragment"
+        android:fragment="com.nextgis.mobile.fragment.SettingsFragment"
         android:title="@string/map"
         android:summary="@string/map_summary"
         >
@@ -38,7 +38,7 @@
             />
     </header>
     <header
-        android:fragment="com.nextgis.mobile.SettingsFragment"
+        android:fragment="com.nextgis.mobile.fragment.SettingsFragment"
         android:title="@string/location"
         android:summary="@string/location_summary"
         >
@@ -48,7 +48,7 @@
             />
     </header>
     <header
-        android:fragment="com.nextgis.mobile.SettingsFragment"
+        android:fragment="com.nextgis.mobile.fragment.SettingsFragment"
         android:title="@string/tracks"
         android:summary="@string/tracks_summary"
         >
