--- a/app/src/main/res/xml/preference_headers.xml
+++ b/app/src/main/res/xml/preference_headers.xml
@@ -65,7 +65,7 @@
         >
         <intent
             android:targetPackage="com.nextgis.mobile"
-            android:targetClass="com.nextgis.mobile.NGWSettingsActivityProxy"
+            android:targetClass="com.nextgis.mobile.activity.NGWSettingsActivityProxy"
             android:action="com.nextgis.mobile.PREFS_NGW"
             />
     </header>
