--- a/app/src/main/res/xml/preference_headers_legacy.xml
+++ b/app/src/main/res/xml/preference_headers_legacy.xml
@@ -57,7 +57,7 @@
         >
         <intent
             android:targetPackage="com.nextgis.mobile"
-            android:targetClass="com.nextgis.mobile.SettingsActivity"
+            android:targetClass="com.nextgis.mobile.activity.SettingsActivity"
             android:action="com.nextgis.mobile.PREFS_TRACKING"
             />
     </Preference>
@@ -67,7 +67,7 @@
         >
         <intent
             android:targetPackage="com.nextgis.mobile"
-            android:targetClass="com.nextgis.mobile.NGWSettingsActivityProxy"
+            android:targetClass="com.nextgis.mobile.activity.NGWSettingsActivityProxy"
             android:action="com.nextgis.mobile.PREFS_NGW"
             />
     </Preference>
