--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -52,8 +52,8 @@
             android:layout_marginLeft="16dp"
             android:layout_centerVertical="true"
             fab:fab_size="mini"
-            fab:fab_addButtonColorNormal="@color/primary"
-            fab:fab_addButtonColorPressed="@color/accent"
+            fab:fab_addButtonColorNormal="?attr/colorPrimary"
+            fab:fab_addButtonColorPressed="?attr/colorAccent"
             fab:fab_addButtonPlusIconColor="@android:color/white"
             fab:fab_icon="@drawable/ic_plus"
             />
@@ -68,8 +68,8 @@
             android:layout_marginLeft="16dp"
             android:layout_below="@+id/action_zoom_in"
             fab:fab_size="mini"
-            fab:fab_addButtonColorNormal="@color/primary"
-            fab:fab_addButtonColorPressed="@color/accent"
+            fab:fab_addButtonColorNormal="?attr/colorPrimary"
+            fab:fab_addButtonColorPressed="?attr/colorAccent"
             fab:fab_addButtonPlusIconColor="@android:color/white"
             fab:fab_icon="@drawable/ic_minus"
             />
@@ -81,8 +81,8 @@
             android:layout_above="@id/fl_status_panel"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            fab:fab_addButtonColorNormal="@color/primary"
-            fab:fab_addButtonColorPressed="@color/accent"
+            fab:fab_addButtonColorNormal="?attr/colorPrimary"
+            fab:fab_addButtonColorPressed="?attr/colorAccent"
             fab:fab_addButtonPlusIconColor="@android:color/white"
             android:layout_marginRight="16dp"
             android:layout_marginEnd="16dp"
@@ -92,30 +92,30 @@
                 android:id="@+id/add_geometry_by_walk"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                fab:fab_colorNormal="@color/primary"
+                fab:fab_colorNormal="?attr/colorPrimary"
                 fab:fab_size="mini"
                 fab:fab_icon="@drawable/ic_action_maps_directions_walk"
-                fab:fab_colorPressed="@color/accent"
+                fab:fab_colorPressed="?attr/colorAccent"
                 />
 
             <com.getbase.floatingactionbutton.FloatingActionButton
                 android:id="@+id/add_new_geometry"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                fab:fab_colorNormal="@color/primary"
+                fab:fab_colorNormal="?attr/colorPrimary"
                 fab:fab_size="mini"
                 fab:fab_icon="@drawable/ic_action_edit_light"
-                fab:fab_colorPressed="@color/accent"
+                fab:fab_colorPressed="?attr/colorAccent"
                 />
 
             <com.getbase.floatingactionbutton.FloatingActionButton
                 android:id="@+id/add_current_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                fab:fab_colorNormal="@color/primary"
+                fab:fab_colorNormal="?attr/colorPrimary"
                 fab:fab_size="mini"
                 fab:fab_icon="@drawable/ic_action_maps_place"
-                fab:fab_colorPressed="@color/accent"
+                fab:fab_colorPressed="?attr/colorAccent"
                 />
 
         </com.getbase.floatingactionbutton.FloatingActionsMenu>
