--- a/app/src/main/res/layout/status_panel.xml
+++ b/app/src/main/res/layout/status_panel.xml
@@ -25,7 +25,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:background="@color/primary"
+              android:background="?attr/colorPrimary"
               android:padding="5dp"
               android:orientation="vertical"
               android:gravity="center_vertical"
