--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,28 +28,8 @@
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
     <style name="AppBaseTheme"
-           parent="Theme.AppCompat.Light.NoActionBar">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/primary_dark</item>
-        <item name="colorAccent">@color/accent</item>
-        <item name="undoBarStyle">@style/UndoBarMaterialStyle</item>
-    </style>
+           parent="Theme.NextGIS.AppCompat.Light">
 
-    <!-- Application theme. --><style name="AppTheme"
-                                      parent="AppBaseTheme">
-    <!-- All customizations that are NOT specific to a particular API-level can go here. -->
-    <item name="windowActionBarOverlay">true</item>
-    <item name="windowActionModeOverlay">false</item>
-</style>
-
-    <style name="AppBlackTextTheme"
-           parent="AppTheme">
-        <item name="android:textColor">@color/primary_text_default_material_light</item>
     </style>
 
     <style name="menu_labels_style">
