--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,6 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.nextgis.mobile.activity.MainActivity"
     android:fitsSystemWindows="true"
     >
 
@@ -48,6 +47,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
+            tools:layout="@layout/fragment_map"
             />
 
         <include
@@ -77,6 +77,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="left|start"
         android:fitsSystemWindows="true"
+        tools:layout="@layout/fragment_layers"
         />
 
 </android.support.v4.widget.DrawerLayout>
