--- a/app/src/main/res/xml/syncadapter.xml
+++ b/app/src/main/res/xml/syncadapter.xml
@@ -28,6 +28,6 @@
     android:accountType="com.nextgis.account"
     android:userVisible="true"
     android:supportsUploading="true"
-    android:allowParallelSyncs="true"
+    android:allowParallelSyncs="false"
     android:isAlwaysSyncable="true"
     />
